2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/util/listlib.py:
	  Use built-in sorted function.

	* lib/gaupol/gtk/application.py:
	  Fixed testing.

	* lib/gaupol/gtk/dialogs/language.py:
	* lib/gaupol/gtk/dialogs/preferences.py:
	  Commented testing out for now.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Indented testing output.
	  (parse_options): Added description for parser.

	* lib/gaupol/gtk/dialogs/about.py:
	* lib/gaupol/gtk/dialogs/debug.py:
	* lib/gaupol/gtk/dialogs/encoding.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Added or fixed testing.

	* lib/gaupol/test/__init__.py:
	  (Test.get_micro_dvd_path): Use prefix and suffix.
	  (Test.get_subrip_path): Use prefix and suffix.
	  (run): Do not execute variables. Indented output.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/page.py:
	* lib/gaupol/test/__init__.py:
	  Moved assert_store method from gaupol.test.Test to
	  gaupol.gtk.page.Page and corrected all references.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/project.py:
	* lib/gaupol/gtk/application.py:
	* lib/gaupol/gtk/cellrend/integer.py:
	* lib/gaupol/gtk/cellrend/multiline.py:
	* lib/gaupol/gtk/cellrend/time.py:
	* lib/gaupol/gtk/entries/integer.py:
	* lib/gaupol/gtk/entries/time.py:
	* lib/gaupol/gtk/output.py:
	* lib/gaupol/gtk/page.py:
	* lib/gaupol/gtk/util/config.py:
	* lib/gaupol/gtk/util/gtklib.py:
	* lib/gaupol/gtk/view.py:
	  Added or fixed testing.

	* lib/gaupol/test/__init__.py:
	  (Test.assert_store): New method.

2006-01-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/clipboard.py:
	* lib/gaupol/base/files/determiner.py:
	* lib/gaupol/base/files/microdvd.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/subrip.py:
	* lib/gaupol/base/files/subviewer2.py:
	* lib/gaupol/base/model.py:
	* lib/gaupol/base/project.py:
	* lib/gaupol/base/tags/converter.py: